[package]
name = "trinket-scratch"
version = "0.1.0"
edition = "2018"

[dependencies]
panic-halt = "*"
atmega-hal = { path = "../avr-hal/mcu/atmega-hal", features = [ "atmega328p" ] }
avr-hal-generic = { path = "../avr-hal/avr-hal-generic" }

[dependencies.arduino-hal]
path = "../avr-hal/arduino-hal/"
features = ["trinket-pro"]

[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"

